--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                <a href="#">Contact us</a>
           </button>
      </nav>
+     <div class="bars">
+          <i class="fa-solid fa-bars"></i>
+     </div>
+     
     </header>
  <div class="intro">
      <div class="intro-text">
