--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="dist/style.css" /><script src="https://kit.fontawesome.com/fb52327990.js" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="dist/style.css" />
+    <script src="https://kit.fontawesome.com/fb52327990.js" crossorigin="anonymous"></script>
   </head>
   <body>
      <section class="hero">
@@ -44,7 +44,6 @@
      </div>
  </div>
 </section>
-
 <section class="work">
      <div class="left">
           <h3>How we work</h3>
@@ -72,9 +71,7 @@
                <h4>Strategy</h4>
                <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam .</p>
           </div>
-          
      </div>
-
 </section>
   </body>
 </html>
